front page visiblity issue fixed

--- a/src/views/frontpages/Front.scss
+++ b/src/views/frontpages/Front.scss
@@ -8237,8 +8237,8 @@
           border: 2px solid #000; }
   
   .ftco-animate {
-    opacity: 0;
-    visibility: hidden; }
+    opacity: 1;
+    visibility: visible; }
   
   .bg-primary {
     background: #f86f2d !important; }
